Fonctionnement dans les 2 sens de circulation + vitesse aléatoire des véhicules

--- a/public/index.css
+++ b/public/index.css
@@ -1,6 +1,10 @@
-body{
+body {
     background-image: url("feux.png");
     background-color : #F5C85D;
     background-repeat:no-repeat;
     background-position:top 60px center;
+}
+
+canvas {
+    margin-left: 552px;
 }
