--- a/public/index.css
+++ b/public/index.css
@@ -1,10 +1,82 @@
 body {
-    background-image: url("feux.png");
-    background-color : #F5C85D;
-    background-repeat:no-repeat;
-    background-position:top 60px center;
+    background-color: #F5C85D;
 }
 
 canvas {
-    margin-left: 552px;
+    background-image: url('feux.png');
+    background-repeat: no-repeat;
+    background-position: center;
+    margin-left: auto;
+    margin-right: auto;
+    display: block;
+}
+
+.boutonVert {
+    position: absolute;
+    bottom: 10px;
+    right: 30%;
+    border: 0;
+    line-height: 2.5;
+    padding: 0 20px;
+    font-size: 1rem;
+    text-align: center;
+    color: #fff;
+    text-shadow: 1px 1px 1px #000;
+    border-radius: 20px;
+    background-color: rgb(56, 177, 0, 1);
+    background-image: linear-gradient(to top left,
+                                      rgba(0, 0, 0, .2),
+                                      rgba(0, 0, 0, .2) 30%,
+                                      rgba(0, 0, 0, 0));
+    box-shadow: inset 2px 2px 3px rgba(255, 255, 255, .6),
+                inset -2px -2px 3px rgba(0, 0, 0, .6);
+}
+
+.boutonVert:hover {
+    background-color: rgb(65, 206, 0, 1);
+}
+
+.boutonVert:active {
+    box-shadow: inset -2px -2px 3px rgba(255, 255, 255, .6),
+                inset 2px 2px 3px rgba(0, 0, 0, .6);
+}
+
+.boutonRouge {
+    position: absolute;
+    bottom: 10px;
+    right: 20%;
+    border: 0;
+    line-height: 2.5;
+    padding: 0 20px;
+    font-size: 1rem;
+    text-align: center;
+    color: #fff;
+    text-shadow: 1px 1px 1px #000;
+    border-radius: 20px;
+    background-color: rgba(220, 0, 0, 1);
+    background-image: linear-gradient(to top left,
+                                      rgba(0, 0, 0, .2),
+                                      rgba(0, 0, 0, .2) 30%,
+                                      rgba(0, 0, 0, 0));
+    box-shadow: inset 2px 2px 3px rgba(255, 255, 255, .6),
+                inset -2px -2px 3px rgba(0, 0, 0, .6);
+}
+
+.boutonRouge:hover {
+    background-color: rgb(255, 0, 0, 1);
+}
+
+.boutonRouge:active {
+    box-shadow: inset -2px -2px 3px rgba(255, 255, 255, .6),
+                inset 2px 2px 3px rgba(0, 0, 0, .6);
+}
+
+button:disabled,
+.boutonVert:disabled{
+    background-color: #cccccc;
+    color: #666666;
+  }
+.boutonRouge:disabled{
+  background-color: #cccccc;
+  color: #666666;
 }
