--- a/public/index.css
+++ b/public/index.css
@@ -4,11 +4,11 @@ body {
 
 h1{
     text-align: center;
-    font-family: Arial;
+    font-family: Arial, serif;
 }
 
 canvas {
-    background-image: url('feux.png');
+    background-image: url('img/feux.png');
     background-repeat: no-repeat;
     background-position: center;
     margin-left: auto;
