Création d'un 2ème graphique sur le temps d'arret moyen des voitures

--- a/public/index.css
+++ b/public/index.css
@@ -17,7 +17,13 @@ h1{
 .lineChart {
     position: absolute;
     left: 1100px;
-    bottom: 55%;
+    bottom: 50%;
+}
+
+.barChart {
+    position: absolute;
+    left: 1100px;
+    bottom: 8%;
 }
 
 .bouton {
